--- a/cinema/about.html
+++ b/cinema/about.html
@@ -37,7 +37,7 @@
       <div class="container py-1">
         <div class="row align-items-center">
           <div class="col-8 col-md-8 col-lg-4">
-            <h1 class="mb-0"><a href="index.html" class="text-white h2 mb-0"><strong>Deejee<span
+            <h1 class="mb-0"><a href="index.php" class="text-white h2 mb-0"><strong>Cinema<span
                     class="text-primary">.</span></strong></a></h1>
           </div>
           <div class="col-4 col-md-4 col-lg-8">
@@ -46,31 +46,24 @@
               <div class="d-inline-block d-lg-none ml-md-0 mr-auto py-3"><a href="#"
                   class="site-menu-toggle js-menu-toggle text-white"><span class="icon-menu h3"></span></a></div>
 
-              <ul class="site-menu js-clone-nav d-none d-lg-block">
-                <li>
-                  <a href="index.html">Home</a>
-                </li>
-                <li><a href="dj.html">DJs</a></li>
-                <li class="has-children">
-                  <a href="shows.html">Shows</a>
-                  <ul class="dropdown arrow-top">
-                    <li><a href="#">Top 20 of The Week</a></li>
-                    <li><a href="#">Featured Artist</a></li>
-                    <li><a href="#">Interviews</a></li>
+                  <ul class="site-menu js-clone-nav d-none d-lg-block">
+                    <li class="">
+                      <a href="index.php">Home</a>
+                    </li>
                     <li class="has-children">
-                      <a href="#">Sub Menu</a>
-                      <ul class="dropdown">
-                        <li><a href="#">Menu One</a></li>
-                        <li><a href="#">Menu Two</a></li>
-                        <li><a href="#">Menu Three</a></li>
+                      <a href="#">Movie</a>
+                      <ul class="dropdown arrow-top">
+                        <li><a href="selectdate.php">Schedule</a></li>
+                        <li><a href="nowplaying.php">Now Playing</a></li>
+                        <li><a href="#">Coming Soon</a></li>
+                        <li><a href="ranking.php">Ranking</a></li>
                       </ul>
                     </li>
+                    <li><a href="events.html">News</a></li>
+                    <li class ="active"><a href="about.html">About</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                    
                   </ul>
-                </li>
-                <li><a href="events.html">Events</a></li>
-                <li class="active"><a href="about.html">About</a></li>
-                <li><a href="contact.html">Contact</a></li>
-              </ul>
             </nav>
           </div>
 
@@ -89,7 +82,7 @@
     <div class="site-mobile-menu-body"></div>
   </div> <!-- .site-mobile-menu -->
 
-  <div class="site-blocks-cover inner-page-cover overlay" style="background-image: url('images/hero_bg_1.jpg');"
+  <div class="site-blocks-cover inner-page-cover overlay" style="background-image: url('images/ave.jpg');"
     data-aos="fade" data-stellar-background-ratio="0.5" data-aos="fade">
     <div class="container">
       <div class="row align-items-center justify-content-center">
